# stm32l4-rust-baremetal-quickstart

./: Cargo.toml  README.md  memory.x  openocd.gdb
.cargo/: config.toml
docs/datasheets/stm32l4/STM32L4_svd/: Release_Notes.htm
src/: main.rs
