[package]
authors = ["Douglas Russell <doug@therussellfamily.org>"]
edition = "2018"
name = "blinky"
version = "1.0.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
panic-itm = "0.4.2"
stm32l4 = { version = "0.15.1", features = ["stm32l4x5"] }
stm32l4xx-hal = { version = "0.7.1", features = ["stm32l475"] }

[[bin]]
name = "blinky"
test = false
bench = false
